hero prevent text wrap

--- a/src/routes/Home/styles.scss
+++ b/src/routes/Home/styles.scss
@@ -28,6 +28,7 @@
 
         div {
             margin-bottom: 0.25em;
+            white-space: nowrap;
         }
 
         .hero__text-title {
